Added STYLE tags as per review in index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<HTML>
+         <!-----Please use CSS style tags here----->
+
 <head>  
- <!-----Please use CSS style tags here----->
+<style>
+      h  {color: red ; font-size: 300%}
+      p  {color: red}
+</style>
+
 </head>
 <body>
 	<h> Heading-1 </h>
 	<p> paragraph-1 </p>
 	<h> Heading-2 </h>
 </body>
+</HTML>
