--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 </head>
 <body>
-	<h> Heading-1 </h>
+	<h1> Heading-1 </h1>
 	<p> paragraph-1 </p>
-	<h> Heading-2 </h>
+	<h1> Heading-2 </h1>
+	<h1> Heading-3 </h1>
+	<h1> Heading-4</h1>
 </body>
 </HTML>
