--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <head>  
 <style>
-      h  {color: red ; font-size: 300%}
+      h1  {color: red ; font-size: 300%}
+	h2  {color: blue ; font-size: 150%}  <!-----added in the remote------>
       p  {color: red}
 </style>
 
 </head>
 <body>
-	<h> Heading-1 </h>
+	<h1> Heading-1 </h1>
 	<p> paragraph-1 </p>
-	<h> Heading-2 </h>
+	<h1> Heading-2 </h1>
 </body>
 </HTML>
