--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <style>
       h1  {color: red ; font-size: 300%}
 	h2  {color: blue ; font-size: 150%}  <!-----added in the remote------>
+	h3  {color: orange ; font-size: 150%} 
       p  {color: red}
 </style>
 
