Added h3 style in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <style>
       h1  {color: red ; font-size: 300%}
 	h2  {color: blue ; font-size: 150%}  <!-----added in the remote------>
-      p  {color: red}
+	h3  {color: yellow ; font-size: 150%} <!-----added in local ----->
+	p  {color: red}
 </style>
 
 </head>
